--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axion": "^0.1.0",
     "axios": "^0.27.2",
     "font-awesome": "^4.7.0",
     "form-data": "^4.0.0",
     "react": "^18.2.0",
     "react-coverflow": "^0.2.20",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typewriter-effect": "^2.19.0",
