--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "axios": "^0.27.2",
     "font-awesome": "^4.7.0",
     "form-data": "^4.0.0",
+    "libphonenumber-js": "^1.10.13",
+    "material-ui-phone-number": "^3.0.0",
+    "mui-tel-input": "^2.0.2",
     "react": "^18.2.0",
     "react-coverflow": "^0.2.20",
     "react-dom": "^18.2.0",
