--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/lab": "^5.0.0-alpha.101",
     "@mui/material": "^5.10.5",
+    "@mui/x-date-pickers": "^5.0.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axion": "^0.1.0",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.5",
     "font-awesome": "^4.7.0",
     "form-data": "^4.0.0",
     "libphonenumber-js": "^1.10.13",
