--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aos": "^2.3.4",
     "axion": "^0.1.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.2",
     "dayjs": "^1.11.5",
     "font-awesome": "^4.7.0",
     "form-data": "^4.0.0",
@@ -22,6 +23,7 @@
     "material-ui-phone-number": "^3.0.0",
     "mui-tel-input": "^2.0.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-coverflow": "^0.2.20",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
