--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.6",
     "typewriter-effect": "^2.19.0",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
