--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.6",
+    "react-star-ratings": "^2.3.0",
+    "react-star-review": "^1.2.0",
     "typewriter-effect": "^2.19.0",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
