--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "3d-react-carousal": "^5.0.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
@@ -12,7 +13,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "3d-react-carousal": "^5.0.0",
     "aos": "^2.3.4",
     "axion": "^0.1.0",
     "axios": "^0.27.2",
@@ -27,6 +27,7 @@
     "react-bootstrap": "^2.5.0",
     "react-coverflow": "^0.2.20",
     "react-dom": "^18.2.0",
+    "react-floating-whatsapp": "^5.0.6",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-responsive-carousel": "^3.2.23",
@@ -41,7 +42,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --max-old-space-size=8192",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
