--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "3d-react-carousal": "^5.0.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
@@ -13,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "3d-react-carousal": "^5.0.0",
     "aos": "^2.3.4",
     "axion": "^0.1.0",
     "axios": "^0.27.2",
@@ -23,6 +23,7 @@
     "libphonenumber-js": "^1.10.13",
     "material-ui-phone-number": "^3.0.0",
     "mui-tel-input": "^2.0.4",
+    "ngrok": "^4.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-coverflow": "^0.2.20",
