--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-bootstrap": "^2.5.0",
     "react-coverflow": "^0.2.20",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.3.5",
     "react-floating-whatsapp": "^5.0.6",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
