--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ngrok": "^4.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-burger-menu": "^3.0.8",
     "react-coverflow": "^0.2.20",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
